pokemon/style.css
* {
  margin: 0;
  box-sizing: border-box;
}

.pokeGrid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background-color: rgb(86, 175, 175);
}

.scene {
  width: 250px;
  height: 260px;
  margin: 4em; /* .5 to make cards smaller. */
  perspective: 300px;
}

.card {
  width: 100%;
  height: 100%;
  cursor: pointer;
  transition: transform 1.5s;
  transform-style: preserve-3d;
  position: relative;
  text-transform: capitalize;
}

.cardFace {
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
  border-radius: 10px;
}

.card.is-flipped {
  transform: rotateY(-180deg);
}

.front {
  background-color: blueviolet;
}

.back {
  background-color: rgb(112, 113, 200);
  transform: rotateY(180deg);
}

h3,
header {
  background-color: rgb(116, 195, 195);
}

header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
}

#type-select {
  color: white;
  width: 17rem;
  height: 3.5rem;
  background-color: rgb(61, 174, 219);
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
  font-size: small;
  padding: 1.2rem;
  margin: 1.5rem;
  border-style: inset;
  border-radius: 0.5rem;
}

img {
  padding-left: 2rem;
  width: 220px;
}

figcaption {
  text-align: center;
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
  font-size: 1.5rem;
  border-radius: 0.7rem;
  background-color: rgb(96, 192, 192);
  margin: 1rem;
}

ul {
  list-style-type: circle;
  padding: auto;
  font-family: Arial, Helvetica, sans-serif;
  color: white;
}

h3 {
  font-size: 3.5rem;
  text-align: center;
  padding: 1.5rem;
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
  color: rgb(54, 57, 219);
}

h2 {
  font-size: 2rem;
  background-color: rgb(116, 195, 195);
  padding-left: 2rem;
  text-decoration: underline;
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
  color: rgb(54, 57, 219);
}

button {
  width: 10rem;
  height: 3rem;
  margin: 2rem;
  background-color: rgb(61, 174, 219);
  color: aliceblue;
  font-size: large;
  border-radius: 0.3rem;
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
}

h4 {
  padding: 1.4rem;
  padding-bottom: 0;
  text-decoration: underline;
  font-family: "M PLUS 2", sans-serif;
  font-family: "Roboto", sans-serif;
  font-family: "Roboto Slab", serif;
}

